creusot/tests/should_fail/prusti/snap_eq/base.stderr
error: binary operation `==` cannot be applied to type `X` since it doesn't implement `SnapEq`
 --> base.rs:7:5
  |
7 |     x == y
  |     ^

error: aborting due to 1 previous error

